fix(brave): hide scrollbar in sidebar on Brave browser if sidebar is not overflowing

--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -6,7 +6,7 @@
     height: 100vh;
     transition: 150ms ease;
     display: flex;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
